Some visual tweaks

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
       <div class="page-size-controls">
         <label for="page-size">Items per page:</label>
         <select id="page-size">
-          <option value="50" selected>50</option>
-          <option value="100">100</option>
+          <option value="100 selected">100</option>
           <option value="200">200</option>
           <option value="all">All</option>
         </select>
