--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
           <option value="collection">Collection</option>
           <option value="wantlist">Wantlist</option>
         </select>
+        <div class="view-toggle-desktop" aria-hidden="true">
+          <button type="button" class="view-toggle-button" data-view="collection">Collection</button>
+          <button type="button" class="view-toggle-button" data-view="wantlist">Wantlist</button>
+        </div>
       </div>
       <button id="theme-toggle" type="button">
         <span class="theme-toggle-icon" aria-hidden="true">
