--- a/index.html
+++ b/index.html
@@ -12,7 +12,34 @@
 </head>
 <body>
   <header class="top-bar">
-    <h1>Ma collection de DVDs</h1>
+    <div class="site-switcher">
+      <h1
+        class="site-title-toggle"
+        tabindex="0"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
+        <span class="site-title-text">Ma collection de DVDs</span>
+        <span class="site-title-caret" aria-hidden="true">
+          &#x25BE;
+        </span>
+      </h1>
+
+      <div class="site-menu" role="menu" aria-label="Select site">
+        <a
+          href="/records"
+          class="site-menu-item"
+          role="menuitem"
+        >
+          <img
+            src="/records-logo.svg"
+            alt=""
+            class="site-menu-logo"
+          />
+          <span class="site-menu-label">Foufouillou's records</span>
+        </a>
+      </div>
+    </div>
     <div class="top-bar-right">
       <div class="view-switch">
         <span class="view-switch-label">View</span>
