--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           role="menuitem"
         >
           <img
-            src="/records-logo.svg"
+            src="records-logo.svg"
             alt=""
             class="site-menu-logo"
           />
